[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter III/SeriesParallel/Parallel.gd" type="Script" id=2]
[ext_resource path="res://Objects/Elements/Resistor/Resistor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Elements/CircuitNode/CircuitNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/Weapon.png" type="Texture" id=5]

[node name="Parallel" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 191.447, 83.5093 )
scale = Vector2( 0.504959, 0.504959 )
texture = ExtResource( 5 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 76.1123
margin_top = 33.8883
margin_right = 262.113
margin_bottom = 47.8883
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 167.77
margin_top = 8.07788
margin_right = 217.77
margin_bottom = 22.0779
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resistor1" parent="." index="5" instance=ExtResource( 3 )]
position = Vector2( 208.945, 94.892 )

[node name="Button" type="Button" parent="Resistor1" index="3"]
margin_left = -16.0
margin_top = -9.0
margin_right = 15.0
margin_bottom = 11.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resistor1" index="4"]
margin_left = -6.82745
margin_top = -16.5809
margin_right = 33.1725
margin_bottom = -2.58095
text = "R1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resistor2" parent="." index="6" instance=ExtResource( 3 )]
position = Vector2( 208.903, 123.559 )

[node name="Button" type="Button" parent="Resistor2" index="3"]
margin_left = -16.0
margin_top = -9.0
margin_right = 15.0
margin_bottom = 11.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resistor2" index="4"]
margin_left = -6.82745
margin_top = -16.5809
margin_right = 33.1725
margin_bottom = -2.58095
text = "R2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="7"]
margin_left = 106.346
margin_top = 146.812
margin_right = 163.346
margin_bottom = 166.812
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CircuitNode" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( 108.32, 79.785 )

[node name="CircuitNode2" parent="." index="9" instance=ExtResource( 4 )]
position = Vector2( 157.556, 79.785 )

[node name="CircuitNode3" parent="." index="10" instance=ExtResource( 4 )]
position = Vector2( 108.32, 129.62 )

[node name="CircuitNode4" parent="." index="11" instance=ExtResource( 4 )]
position = Vector2( 157.548, 129.62 )

[node name="Wire1" type="Line2D" parent="." index="12"]
width = 1.5
default_color = Color( 1, 1, 1, 1 )

[node name="Wire2" type="Line2D" parent="." index="13"]
width = 1.5
default_color = Color( 1, 1, 1, 1 )

[node name="Req" type="LineEdit" parent="." index="14"]
visible = false
margin_left = 192.742
margin_top = 97.0691
margin_right = 250.742
margin_bottom = 121.069
rect_scale = Vector2( 0.7, 0.7 )
align = 1
placeholder_text = "Req"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Resistor1" to="." method="_on_Resistor1_area_entered"]
[connection signal="area_exited" from="Resistor1" to="." method="_on_Resistor1_area_exited"]
[connection signal="pressed" from="Resistor1/Button" to="Resistor1" method="_on_Button_pressed"]
[connection signal="area_entered" from="Resistor2" to="." method="_on_Resistor2_area_entered"]
[connection signal="area_exited" from="Resistor2" to="." method="_on_Resistor2_area_exited"]
[connection signal="pressed" from="Resistor2/Button" to="Resistor2" method="_on_Button_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="area_entered" from="CircuitNode" to="Resistor2" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode" to="Resistor1" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode2" to="Resistor2" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode2" to="Resistor1" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode3" to="Resistor2" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode3" to="Resistor1" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode4" to="Resistor2" method="_on_CircuitNode_area_entered"]
[connection signal="area_entered" from="CircuitNode4" to="Resistor1" method="_on_CircuitNode_area_entered"]
[connection signal="text_entered" from="Req" to="." method="_on_Req_text_entered"]
